Build script, runner for java, frontend changes